[package]
name = "async-runtime"
description = "Crate for runtime agnostic async code"
version = "0.1.0"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
edition = "2018"

[dependencies]
pin-project-lite = "0.2"
tokio_02 = { package = "tokio", version = "0.2", features = ["time"], optional = true }
tokio_03 = { package = "tokio", version = "0.3", features = ["macros", "rt-multi-thread"], optional = true }
tokio_1 = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread"], optional = true }
async-std_1 = { package = "async-std", version = "1", optional = true }
smol_1 = { package = "smol", version = "1", optional = true }

[dev-dependencies]
tokio_02 = { package = "tokio", version = "0.2", features = ["macros", "rt-threaded"] }
tokio_03 = { package = "tokio", version = "0.3", features = ["macros", "rt-multi-thread"] }
tokio_1 = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread"] }

[features]
with-tokio_02 = [ "tokio_02" ]
with-tokio_03 = [ "tokio_03/time" ]
with-tokio_1 = [ "tokio_1/time" ]
with-async-std_1 = [ "async-std_1" ]
with-smol_1 = [ "smol_1" ]
